welcome.lessons.welcome.summative.Moria.scala.code
back()
while (! isFacingWall) {
  if (isOnBaggle())
  	moveBaggle();
  
  forward();
}

def moveBaggle() {
  pickupBaggle();
  back();
  while (!isFacingWall() && !isOverBaggle()) {
    forward();
  }
  dropBaggle();
  back()
}